--- a/src/presentations/containers/CurrentPositionButton.css
+++ b/src/presentations/containers/CurrentPositionButton.css
@@ -8,4 +8,8 @@
   box-shadow: 0 0 2px 1px $color-shadow;
   cursor: pointer;
   overscroll-behavior-y: contain;
+
+  &.CurrentPositionButton__Hidden {
+    display: none;
+  }
 }
