--- a/src/presentations/application/Layout.new.pug
+++ b/src/presentations/application/Layout.new.pug
@@ -54,10 +54,10 @@ html(lang=props.lang)
       include ../../public/application/bundle.js
 
     // For maps page
-    link(rel="preconnect" href="//www.mapbox.com" crossorigin)
-    link(rel="preconnect" href="//www.openstreetmap.com" crossorigin)
-    link(rel="preconnect" href="//events.mapbox.com" crossorigin)
-    link(rel="preconnect" href="//www.google-analytics.com" crossorigin)
+    link(rel="preconnect" href="http://www.openstreetmap.com" crossorigin)
+    link(rel="preconnect" href="https://www.mapbox.com" crossorigin)
+    link(rel="preconnect" href="https://events.mapbox.com" crossorigin)
+    link(rel="preconnect" href="https://www.google-analytics.com" crossorigin)
 
     script.
       window.state = !{JSON.stringify(props.state)};
