Change candidate layout to Sheet

--- a/src/presentations/pages/Maps/mobile/index.css
+++ b/src/presentations/pages/Maps/mobile/index.css
@@ -1,7 +1,7 @@
 @import 'application/vars';
-@import 'containers/MapHeader';
 @import 'containers/CurrentPositionButton';
 @import 'containers/SearchForm';
+@import 'components/CandidateListItem';
 @import 'components/Sheet';
 @import 'components/StoreMapView';
 @import 'components/StoreCard';
