--- a/src/presentations/components/Sheet.css
+++ b/src/presentations/components/Sheet.css
@@ -19,6 +19,6 @@
     background: $color-white;
     height: 100%;
     overflow: scroll;
-    -webkit-overflow-scrolling: touch
+    -webkit-overflow-scrolling: touch;
   }
 }
