--- a/src/presentations/pages/Maps/mobile/index.css
+++ b/src/presentations/pages/Maps/mobile/index.css
@@ -2,6 +2,7 @@
 @import 'containers/CurrentPositionButton';
 @import 'containers/SearchForm';
 @import 'components/CandidateListItem';
+@import 'components/FreeSpace';
 @import 'components/Sheet';
 @import 'components/ShopMapView';
 @import 'components/ShopCard';
