--- a/src/presentations/components/Sheet.css
+++ b/src/presentations/components/Sheet.css
@@ -1,18 +1,17 @@
 .Sheet {
   position: absolute;
-  top: 0;
-  z-index: 12000;
+  top: 100%;
   width: 100%;
   height: 100%;
   max-height: 100%;
   overflow: hidden;
-  transform: translateY(0);
+  transform: translateY(-100%);
   overscroll-behavior-y: contain;
   transition: transform $short ease-in-out;
   will-change: transform;
 
   &.Sheet__Hidden {
-    transform: translateY(100%);
+    transform: translateY(0);
   }
 
   .Sheet--Content {
