--- a/src/presentations/pages/Maps/mobile/index.css
+++ b/src/presentations/pages/Maps/mobile/index.css
@@ -1,8 +1,11 @@
 @import 'application/vars';
 @import 'containers/CurrentPositionButton';
+@import 'containers/MapsMobilePage';
 @import 'containers/SearchForm';
+@import 'components/CandidateList';
 @import 'components/CandidateListItem';
 @import 'components/FreeSpace';
+@import 'components/Modal';
 @import 'components/Sheet';
 @import 'components/ShopMapView';
 @import 'components/ShopCard';
@@ -12,38 +15,4 @@
 html,
 body {
   height: 100%;
-}
-
-.MapsMobilePage {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-
-  .MapsMobilePage--Content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.Modal {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: unset;
-  width: 100%;
-  height: auto;
-  max-height: 100%;
-  overflow: scroll;
-  background: $color-white;
-  z-index: 4000;
-  transform: translateY(0);
-  box-shadow: 0 0 2px 2px $color-shadow;
-  overscroll-behavior-y: contain;
-  transition: transform $short ease-in-out;
-  will-change: transform;
-
-  &.Modal__Hidden {
-    transform: translateY(100%);
-  }
 }
