--- a/app/src/presentations/pages/Shops/Layout.pug
+++ b/app/src/presentations/pages/Shops/Layout.pug
@@ -51,7 +51,7 @@ html(lang=props.lang)
         route: '#{props.route}',
       };
     script
-      include ../../public/application/bundle.js
+      include ../../../public/application/bundle.js
 
     // For maps page
     link(rel="preconnect" href="http://www.openstreetmap.com" crossorigin)
