--- a/app/src/presentations/pages/ShopEdit/desktop/index.css
+++ b/app/src/presentations/pages/ShopEdit/desktop/index.css
@@ -1,58 +1,7 @@
 @import 'application/vars';
-@import 'components/CurrentPositionButton';
-@import 'components/ShopMapView';
-@import 'components/ShopCard';
-@import 'components/ShopMarker';
+@import 'components/ShopForm';
 
 html,
 body {
   height: 100%;
-}
-
-.MapsDesktopPage {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-
-  .MapsDesktopPage--Content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-.CurrentPostionMarker {
-  position: relative;
-
-  .CurrentPostionMarker--Icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: inline-block;
-    background: #2196f3;
-    width: 16px !important;
-    height: 16px !important;
-    border-radius: 50%;
-    box-shadow: 0 0 2px 2px $color-shadow;
-  }
-}
-
-.Modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: unset;
-  width: auto;
-  height: 100%;
-  max-height: 100%;
-  overflow: scroll;
-  background: $color-white;
-  z-index: 4000;
-  transform: translateX(0);
-  transition: transform $short ease-in-out;
-  box-shadow: 0 0 2px 2px $color-shadow;
-
-  &.Modal__Hidden {
-    transform: translateX(-100%);
-  }
 }
