--- a/app/src/presentations/pages/ShopEdit/mobile/index.css
+++ b/app/src/presentations/pages/ShopEdit/mobile/index.css
@@ -1,16 +1,5 @@
 @import 'application/vars';
-@import 'containers/MapsMobilePage';
-@import 'components/CandidateList';
-@import 'components/CandidateListItem';
-@import 'components/CurrentPositionButton';
-@import 'components/FreeSpace';
-@import 'components/Modal';
-@import 'components/SearchForm';
-@import 'components/Sheet';
-@import 'components/ShopMapView';
-@import 'components/ShopCard';
-@import 'components/ShopCards';
-@import 'components/ShopMarker';
+@import 'components/ShopForm';
 
 html,
 body {
